--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Library MCA</title>
-<link rel="stylesheet" href="css/HomePageStyle.css">
+<link rel="stylesheet" href="src/main/webapp/css/HomePageStyle.css">
 
 </head>
 <body>
