--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	
 	<script
 		src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-	<script src="css/script.js"></script>
+	<script src="src/main/webapp/css/script.js"></script>
 
 </body>
 </html>
