--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 			<li class="slide">
 				<div class="slide-partial slide-left">
 					<img
-						src="images/img1a.jpg" />
+						src="img1a.jpg" />
 				</div>
 				<div class="slide-partial slide-right">
 					<img
-						src="images/img1b.jpg" />
+						src="img1b.jpg" />
 				</div>
 				<h1 class="title">
 					<span class="title-text"></span>
