--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<li class="item"><a href="Services.jsp">Services</a></li>
 			<li class="item"><a href="AboutUs.jsp">About Us</a></li>
 			<li class="item"><a href="ContactUs.jsp">Contact Us</a></li>
-			<li class="item dropdown"><a href="AdminLogin.html">Login</a>
+			<li class="item dropdown"><a href="src/main/webapp/AdminLogin.html">Login</a>
             </li>
 		</ul>
 	</nav>
